UCF-APR2.4/ftr main/force-app/main/default/objects/Wholesale_Service_Order__c/Wholesale_Service_Order__c.object-meta.xml
<CustomObject>
    <label>Wholesale Service Order</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Wholesale Service Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Wholesale Service Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>