UCF-APR2.4/ftr main/force-app/main/default/objects/Wholesale_Service_Order__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Wholesale Service Orders</relationshipLabel>
    <relationshipName>Wholesale_Service_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>