UCF-APR2.4/ftr main/force-app/main/default/objects/Wholesale_Service_Order__c/fields/Activity_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Activity_Indicator__c</fullName>
    <description>M6 Activity indicator field for Wholesale orders</description>
    <label>Activity Indicator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Change</fullName>
            </value>
            <value>
                <fullName>Disconnect</fullName>
            </value>
            <value>
                <fullName>In Service</fullName>
            </value>
            <value>
                <fullName>Inside Move</fullName>
            </value>
            <value>
                <fullName>Outside Move</fullName>
            </value>
            <value>
                <fullName>Record Activity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>