UCF-APR2.4/ftr main/force-app/main/default/objects/Wholesale_Service_Order__c/fields/AE_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>AE_Contact_Number__c</fullName>
    <label>AE Contact Number</label>
    <type>Phone</type>
</CustomField>