UCF-APR2.4/ftr main/force-app/main/default/objects/Wholesale_Service_Order__c/fields/AE_CRIS__c.field-meta.xml
<CustomField>
    <fullName>AE_CRIS__c</fullName>
    <label>AE CRIS #</label>
    <length>10</length>
    <type>Text</type>
</CustomField>