UCF-APR2.4/ftr main/force-app/main/default/objects/Wholesale_Service_Order__c/fields/AE_Name__c.field-meta.xml
<CustomField>
    <fullName>AE_Name__c</fullName>
    <label>AE Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>