UCF-APR2.4/ftr main/force-app/main/default/objects/Wholesale_Service_Order__c/fields/Allocated_Total_Capex__c.field-meta.xml
<CustomField>
    <fullName>Allocated_Total_Capex__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Allocated Total Capex</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>