UCF-APR2.4/ftr main/force-app/main/default/objects/Wholesale_Service_Order__c/fields/ASR_Remarks__c.field-meta.xml
<CustomField>
    <fullName>ASR_Remarks__c</fullName>
    <label>ASR Remarks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>