UCF-APR2.4/ftr main/force-app/main/default/objects/Wholesale_Service_Order__c/fields/BDT__c.field-meta.xml
<CustomField>
    <fullName>BDT__c</fullName>
    <label>BDT</label>
    <length>100</length>
    <type>Text</type>
</CustomField>