UCF-APR2.4/ftr main/force-app/main/default/objects/Wholesale_Service_Order__c/fields/BDT_Required__c.field-meta.xml
<CustomField>
    <fullName>BDT_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BDT Required</label>
    <type>Checkbox</type>
</CustomField>