UCF-APR2.4/ftr main/force-app/main/default/objects/Wholesale_Service_Order__c/fields/CCEA__c.field-meta.xml
<CustomField>
    <fullName>CCEA__c</fullName>
    <label>CCEA</label>
    <length>200</length>
    <type>Text</type>
</CustomField>