UCF-APR2.4/ftr main/force-app/main/default/objects/Wholesale_Service_Order__c/fields/CCNA__c.field-meta.xml
<CustomField>
    <fullName>CCNA__c</fullName>
    <label>CCNA</label>
    <length>100</length>
    <type>Text</type>
</CustomField>