UCF-APR2.4/ftr main/force-app/main/default/objects/Wholesale_Service_Order__c/fields/CFA__c.field-meta.xml
<CustomField>
    <fullName>CFA__c</fullName>
    <label>CFA</label>
    <length>100</length>
    <type>Text</type>
</CustomField>