UCF-APR2.4/ftr main/force-app/main/default/objects/Wholesale_Service_Order__c/fields/Circuit_ID__c.field-meta.xml
<CustomField>
    <fullName>Circuit_ID__c</fullName>
    <label>Circuit ID</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>