UCF-APR2.4/ftr main/force-app/main/default/objects/Wholesale_Service_Order__c/fields/Circuit_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Circuit_Quantity__c</fullName>
    <label>Circuit Quantity</label>
    <length>100</length>
    <type>Text</type>
</CustomField>