UCF-APR2.4/ftr main/force-app/main/default/objects/Wholesale_Service_Order__c/fields/Collector_BDT__c.field-meta.xml
<CustomField>
    <fullName>Collector_BDT__c</fullName>
    <label>Collector BDT</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>