UCF-APR2.4/ftr main/force-app/main/default/objects/Wholesale_Service_Order__c/fields/Control_Key__c.field-meta.xml
<CustomField>
    <fullName>Control_Key__c</fullName>
    <label>Control Key#</label>
    <length>100</length>
    <type>Text</type>
</CustomField>