UCF-APR2.4/ftr main/force-app/main/default/objects/Wholesale_Service_Order__c/fields/Customer_Technical_Solution_Sign_Off__c.field-meta.xml
<CustomField>
    <fullName>Customer_Technical_Solution_Sign_Off__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Technical Solution Sign-Off</label>
    <type>Checkbox</type>
</CustomField>