UCF-APR2.4/ftr main/force-app/main/default/objects/Wholesale_Service_Order__c/fields/Direct_Bundled_CS_Cost__c.field-meta.xml
<CustomField>
    <fullName>Direct_Bundled_CS_Cost__c</fullName>
    <label>Direct Bundled CS Cost</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>