UCF-APR2.4/ftr main/force-app/main/default/objects/Wholesale_Service_Order__c/fields/Direct_Lata_Summary__c.field-meta.xml
<CustomField>
    <fullName>Direct_Lata_Summary__c</fullName>
    <label>Direct Lata Summary</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>