UCF-APR2.4/ftr main/force-app/main/default/objects/Wholesale_Service_Order__c/fields/DSAT_ID__c.field-meta.xml
<CustomField>
    <fullName>DSAT_ID__c</fullName>
    <label>DSAT ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>