UCF-APR2.4/ftr main/force-app/main/default/objects/Wholesale_Service_Order__c/fields/estimated_build_time__c.field-meta.xml
<CustomField>
    <fullName>estimated_build_time__c</fullName>
    <label>Estimated Build Time</label>
    <length>15</length>
    <type>Text</type>
</CustomField>