UCF-APR2.4/ftr main/force-app/main/default/objects/Wholesale_Service_Order__c/fields/EVC_BDW__c.field-meta.xml
<CustomField>
    <fullName>EVC_BDW__c</fullName>
    <label>EVC BDW</label>
    <length>100</length>
    <type>Text</type>
</CustomField>