UCF-APR2.4/ftr main/force-app/main/default/objects/Wholesale_Service_Order__c/fields/EVC_NCI__c.field-meta.xml
<CustomField>
    <fullName>EVC_NCI__c</fullName>
    <label>EVC NCI</label>
    <length>200</length>
    <type>Text</type>
</CustomField>