UCF-APR2.4/ftr main/force-app/main/default/objects/Wholesale_Service_Order__c/fields/EVC_SPEC_Code__c.field-meta.xml
<CustomField>
    <fullName>EVC_SPEC_Code__c</fullName>
    <label>EVC SPEC Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>