UCF-APR2.4/ftr main/force-app/main/default/objects/Wholesale_Service_Order__c/fields/EVCI__c.field-meta.xml
<CustomField>
    <fullName>EVCI__c</fullName>
    <label>EVCI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>