UCF-APR2.4/ftr main/force-app/main/default/objects/Wholesale_Service_Order__c/fields/Expedite__c.field-meta.xml
<CustomField>
    <fullName>Expedite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Expedite</label>
    <type>Checkbox</type>
</CustomField>