UCF-APR2.4/ftr main/force-app/main/default/objects/Wholesale_Service_Order__c/fields/FOC__c.field-meta.xml
<CustomField>
    <fullName>FOC__c</fullName>
    <description>Firm Order Commitment date from M6</description>
    <label>FOC Date</label>
    <type>Date</type>
</CustomField>