UCF-APR2.4/ftr main/force-app/main/default/objects/Wholesale_Service_Order__c/fields/Initiatior_Email__c.field-meta.xml
<CustomField>
    <fullName>Initiatior_Email__c</fullName>
    <label>Initiatior Email</label>
    <type>Email</type>
</CustomField>