UCF-APR2.4/ftr main/force-app/main/default/objects/Wholesale_Service_Order__c/fields/Initiatior_Name__c.field-meta.xml
<CustomField>
    <fullName>Initiatior_Name__c</fullName>
    <label>Initiatior Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>