UCF-APR2.4/ftr main/force-app/main/default/objects/Wholesale_Service_Order__c/fields/Initiatior_TN__c.field-meta.xml
<CustomField>
    <fullName>Initiatior_TN__c</fullName>
    <label>Initiatior TN</label>
    <type>Phone</type>
</CustomField>