UCF-APR2.4/ftr main/force-app/main/default/objects/Wholesale_Service_Order__c/fields/IRR__c.field-meta.xml
<CustomField>
    <fullName>IRR__c</fullName>
    <label>IRR</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>