UCF-APR2.4/ftr main/force-app/main/default/objects/Wholesale_Service_Order__c/fields/IRR_Internal_Rate_of_Return__c.field-meta.xml
<CustomField>
    <fullName>IRR_Internal_Rate_of_Return__c</fullName>
    <label>IRR (Internal Rate of Return)</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>