UCF-APR2.4/ftr main/force-app/main/default/objects/Wholesale_Service_Order__c/fields/M6_Order_status__c.field-meta.xml
<CustomField>
    <fullName>M6_Order_status__c</fullName>
    <label>M6 Order status</label>
    <length>15</length>
    <type>Text</type>
</CustomField>