UCF-APR2.4/ftr main/force-app/main/default/objects/Wholesale_Service_Order__c/fields/Maximum_Service_Frame_Size__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Service_Frame_Size__c</fullName>
    <label>Maximum Service Frame Size</label>
    <length>100</length>
    <type>Text</type>
</CustomField>