UCF-APR2.4/ftr main/force-app/main/default/objects/Wholesale_Service_Order__c/fields/MUX__c.field-meta.xml
<CustomField>
    <fullName>MUX__c</fullName>
    <label>MUX</label>
    <length>200</length>
    <type>Text</type>
</CustomField>