UCF-APR2.4/ftr main/force-app/main/default/objects/Wholesale_Service_Order__c/fields/NPV_Net_Present_Value__c.field-meta.xml
<CustomField>
    <fullName>NPV_Net_Present_Value__c</fullName>
    <label>NPV (Net Present Value)</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>