UCF-APR2.4/ftr main/force-app/main/default/objects/Wholesale_Service_Order__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Wholesale Service Orders (Opportunity)</relationshipLabel>
    <relationshipName>Wholesale_Service_Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>