UCF-APR2.4/ftr main/force-app/main/default/objects/Wholesale_Service_Order__c/fields/OpportunityId__c.field-meta.xml
<CustomField>
    <fullName>OpportunityId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Name</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Wholesale Service Orders</relationshipLabel>
    <relationshipName>Wholesale_Service_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>