UCF-APR2.4/ftr main/force-app/main/default/objects/Wholesale_Service_Order__c/fields/Order_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Record_Type__c</fullName>
    <label>Order Record Type</label>
    <length>200</length>
    <type>Text</type>
</CustomField>