UCF-APR2.4/ftr main/force-app/main/default/objects/Wholesale_Service_Order__c/fields/Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Type__c</fullName>
    <description>M6 Order Type value is &quot;ASR&quot; for Wholesale order, mapped to &quot;type_of_sr&quot; from M6</description>
    <label>Order Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>