UCF-APR2.4/ftr main/force-app/main/default/objects/Wholesale_Service_Order__c/fields/PON__c.field-meta.xml
<CustomField>
    <fullName>PON__c</fullName>
    <label>PON</label>
    <length>100</length>
    <type>Text</type>
</CustomField>