UCF-APR2.4/ftr main/force-app/main/default/objects/Wholesale_Service_Order__c/fields/PRILOC_ADDRESS__c.field-meta.xml
<CustomField>
    <fullName>PRILOC_ADDRESS__c</fullName>
    <description>Concatenate Priloc address fields to show complete address</description>
    <formula>(IF(ISBLANK(PRILOC_ST_NUMBER__c), &apos;&apos;,PRILOC_ST_NUMBER__c &amp; &apos; &apos;) &amp;
IF(ISBLANK(PRILOC_ST_NAME__c), &apos;&apos;,PRILOC_ST_NAME__c &amp; &apos;, &apos;) &amp;
IF(ISBLANK(PRILOC_CITY__c), &apos;&apos;,PRILOC_CITY__c &amp; &apos;, &apos;) &amp;
IF(ISBLANK(PRILOC_STATE__c), &apos;&apos;,PRILOC_STATE__c &amp; &apos;, &apos;) &amp;
IF(ISBLANK( PRILOC_ZIP__c), &apos;&apos;,PRILOC_ZIP__c))</formula>
    <label>PRILOC - Address</label>
    <type>Text</type>
</CustomField>