UCF-APR2.4/ftr main/force-app/main/default/objects/Wholesale_Service_Order__c/fields/PRILOC_CITY__c.field-meta.xml
<CustomField>
    <fullName>PRILOC_CITY__c</fullName>
    <description>Primiary Loc City info from M6</description>
    <label>PRILOC CITY</label>
    <length>50</length>
    <type>Text</type>
</CustomField>