UCF-APR2.4/ftr main/force-app/main/default/objects/Wholesale_Service_Order__c/fields/PRILOC_End_User_Name__c.field-meta.xml
<CustomField>
    <fullName>PRILOC_End_User_Name__c</fullName>
    <label>PRILOC - End User Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>