UCF-APR2.4/ftr main/force-app/main/default/objects/Wholesale_Service_Order__c/fields/PRILOC_LCON__c.field-meta.xml
<CustomField>
    <fullName>PRILOC_LCON__c</fullName>
    <label>PRILOC - LCON</label>
    <length>150</length>
    <type>Text</type>
</CustomField>