UCF-APR2.4/ftr main/force-app/main/default/objects/Wholesale_Service_Order__c/fields/PRILOC_LCON_Email__c.field-meta.xml
<CustomField>
    <fullName>PRILOC_LCON_Email__c</fullName>
    <label>PRILOC - LCON Email</label>
    <type>Email</type>
</CustomField>