UCF-APR2.4/ftr main/force-app/main/default/objects/Wholesale_Service_Order__c/fields/PRILOC_ST_NAME__c.field-meta.xml
<CustomField>
    <fullName>PRILOC_ST_NAME__c</fullName>
    <description>Primay loc Street Name from M6</description>
    <label>PRILOC ST NAME</label>
    <length>100</length>
    <type>Text</type>
</CustomField>