UCF-APR2.4/ftr main/force-app/main/default/objects/Wholesale_Service_Order__c/fields/PRILOC_ST_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>PRILOC_ST_NUMBER__c</fullName>
    <description>Primary Loc St Number from M6</description>
    <label>PRILOC ST NUMBER</label>
    <length>10</length>
    <type>Text</type>
</CustomField>