UCF-APR2.4/ftr main/force-app/main/default/objects/Wholesale_Service_Order__c/fields/PRILOC_STATE__c.field-meta.xml
<CustomField>
    <fullName>PRILOC_STATE__c</fullName>
    <description>Primary location State info from M6</description>
    <label>PRILOC STATE</label>
    <length>50</length>
    <type>Text</type>
</CustomField>