UCF-APR2.4/ftr main/force-app/main/default/objects/Wholesale_Service_Order__c/fields/PRILOC_ZIP__c.field-meta.xml
<CustomField>
    <fullName>PRILOC_ZIP__c</fullName>
    <description>Primary location zipcode from M6</description>
    <label>PRILOC ZIP</label>
    <length>20</length>
    <type>Text</type>
</CustomField>