UCF-APR2.4/ftr main/force-app/main/default/objects/Wholesale_Service_Order__c/fields/Promotion_Num_PNUM__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Num_PNUM__c</fullName>
    <description>New PNUM field to accommodate dummy Pnums for FOTS, DKF, EDG</description>
    <label>Promotion Num (PNUM)</label>
    <length>25</length>
    <type>Text</type>
</CustomField>