UCF-APR2.4/ftr main/force-app/main/default/objects/Wholesale_Service_Order__c/fields/Promotion_Number_PNUM__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Number_PNUM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>OLD field. DO NOT USE THIS.</description>
    <label>Promotion Number(PNUM)</label>
    <referenceTo>FTRWSPnum__c</referenceTo>
    <relationshipLabel>Wholesale Service Orders</relationshipLabel>
    <relationshipName>Wholesale_Service_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>