UCF-APR2.4/ftr main/force-app/main/default/objects/Wholesale_Service_Order__c/fields/Quality_of_Service__c.field-meta.xml
<CustomField>
    <fullName>Quality_of_Service__c</fullName>
    <label>Quality of Service</label>
    <length>100</length>
    <type>Text</type>
</CustomField>