UCF-APR2.4/ftr main/force-app/main/default/objects/Wholesale_Service_Order__c/fields/RPON__c.field-meta.xml
<CustomField>
    <fullName>RPON__c</fullName>
    <label>RPON</label>
    <length>100</length>
    <type>Text</type>
</CustomField>