UCF-APR2.4/ftr main/force-app/main/default/objects/Wholesale_Service_Order__c/fields/Scheduled_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Due_Date__c</fullName>
    <label>Scheduled Due Date</label>
    <type>Date</type>
</CustomField>