UCF-APR2.4/ftr main/force-app/main/default/objects/Wholesale_Service_Order__c/fields/SECLOC_ACTL_NNI_CLLI__c.field-meta.xml
<CustomField>
    <fullName>SECLOC_ACTL_NNI_CLLI__c</fullName>
    <label>SECLOC - ACTL/NNI CLLI</label>
    <length>150</length>
    <type>Text</type>
</CustomField>