UCF-APR2.4/ftr main/force-app/main/default/objects/Wholesale_Service_Order__c/fields/SECLOC_Address__c.field-meta.xml
<CustomField>
    <fullName>SECLOC_Address__c</fullName>
    <description>Concatenated secloc address fields to show complete secloc address.</description>
    <formula>(IF(ISBLANK(SECLOC_ST_NUMBER__c), &apos;&apos;,SECLOC_ST_NUMBER__c &amp; &apos; &apos;) &amp;
IF(ISBLANK(SECLOC_ST_NAME__c), &apos;&apos;,SECLOC_ST_NAME__c &amp; &apos;, &apos;) &amp;
IF(ISBLANK(SECLOC_CITY__c), &apos;&apos;,SECLOC_CITY__c &amp; &apos;, &apos;) &amp;
IF(ISBLANK(SECLOC_STATE__c), &apos;&apos;,SECLOC_STATE__c &amp; &apos;, &apos;) &amp;
IF(ISBLANK( SECLOC_ZIP__c), &apos;&apos;,SECLOC_ZIP__c))</formula>
    <label>SECLOC - Address</label>
    <type>Text</type>
</CustomField>