UCF-APR2.4/ftr main/force-app/main/default/objects/Wholesale_Service_Order__c/fields/SECLOC_CITY__c.field-meta.xml
<CustomField>
    <fullName>SECLOC_CITY__c</fullName>
    <description>Secondary location city info from M6</description>
    <label>SECLOC CITY</label>
    <length>50</length>
    <type>Text</type>
</CustomField>