UCF-APR2.4/ftr main/force-app/main/default/objects/Wholesale_Service_Order__c/fields/SECLOC_End_User_Address__c.field-meta.xml
<CustomField>
    <fullName>SECLOC_End_User_Address__c</fullName>
    <description>OLD FIELD - DO NOT USE. TAKE THE REF OUT OF CODE.</description>
    <label>SECLOC - End User Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>