UCF-APR2.4/ftr main/force-app/main/default/objects/Wholesale_Service_Order__c/fields/SECLOC_End_User_Name__c.field-meta.xml
<CustomField>
    <fullName>SECLOC_End_User_Name__c</fullName>
    <label>SECLOC - End User Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>