UCF-APR2.4/ftr main/force-app/main/default/objects/Wholesale_Service_Order__c/fields/SECLOC_ST_NAME__c.field-meta.xml
<CustomField>
    <fullName>SECLOC_ST_NAME__c</fullName>
    <description>Secondary location Street Name from M6</description>
    <label>SECLOC ST NAME</label>
    <length>50</length>
    <type>Text</type>
</CustomField>