UCF-APR2.4/ftr main/force-app/main/default/objects/Wholesale_Service_Order__c/fields/SECLOC_ST_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>SECLOC_ST_NUMBER__c</fullName>
    <description>Secondary Location Street Number info from M6</description>
    <label>SECLOC ST NUMBER</label>
    <length>10</length>
    <type>Text</type>
</CustomField>