UCF-APR2.4/ftr main/force-app/main/default/objects/Wholesale_Service_Order__c/fields/SECLOC_STATE__c.field-meta.xml
<CustomField>
    <fullName>SECLOC_STATE__c</fullName>
    <description>Secondary location state info from M6</description>
    <label>SECLOC STATE</label>
    <length>50</length>
    <type>Text</type>
</CustomField>