UCF-APR2.4/ftr main/force-app/main/default/objects/Wholesale_Service_Order__c/fields/SECLOC_ZIP__c.field-meta.xml
<CustomField>
    <fullName>SECLOC_ZIP__c</fullName>
    <description>Secondary location zip code from M6</description>
    <label>SECLOC ZIP</label>
    <length>20</length>
    <type>Text</type>
</CustomField>