UCF-APR2.4/ftr main/force-app/main/default/objects/Wholesale_Service_Order__c/fields/SEI__c.field-meta.xml
<CustomField>
    <fullName>SEI__c</fullName>
    <label>SEI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>