UCF-APR2.4/ftr main/force-app/main/default/objects/Wholesale_Service_Order__c/fields/Service_Order__c.field-meta.xml
<CustomField>
    <fullName>Service_Order__c</fullName>
    <externalId>true</externalId>
    <label>Service Order #</label>
    <length>100</length>
    <type>Text</type>
</CustomField>