UCF-APR2.4/ftr main/force-app/main/default/objects/Wholesale_Service_Order__c/fields/Solutions_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Solutions_Engineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Solutions Engineer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Wholesale_Service_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>