UCF-APR2.4/ftr main/force-app/main/default/objects/Wholesale_Service_Order__c/fields/Special_Routing_Priloc__c.field-meta.xml
<CustomField>
    <fullName>Special_Routing_Priloc__c</fullName>
    <label>Special Routing Priloc</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>D = Route other than normal</fullName>
            </value>
            <value>
                <fullName>E = Self Healing Loop</fullName>
            </value>
            <value>
                <fullName>F = Alternate Wire Center</fullName>
            </value>
            <value>
                <fullName>G = Self Healing Loop via Alternate Wire Center</fullName>
            </value>
            <value>
                <fullName>H = Self Healing Wire Center</fullName>
            </value>
            <value>
                <fullName>J = Self Healing Alternate Wire Center</fullName>
            </value>
            <value>
                <fullName>K = Special Routing at POP/PRILOC</fullName>
            </value>
            <value>
                <fullName>N = N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>