UCF-APR2.4/ftr main/force-app/main/default/objects/Wholesale_Service_Order__c/fields/SRG__c.field-meta.xml
<CustomField>
    <fullName>SRG__c</fullName>
    <label>SRG</label>
    <length>100</length>
    <type>Text</type>
</CustomField>