UCF-APR2.4/ftr main/force-app/main/default/objects/Wholesale_Service_Order__c/fields/Stage_Owner__c.field-meta.xml
<CustomField>
    <fullName>Stage_Owner__c</fullName>
    <label>Stage Owner</label>
    <length>200</length>
    <type>Text</type>
</CustomField>