UCF-APR2.4/ftr main/force-app/main/default/objects/Wholesale_Service_Order__c/fields/Supplement_Type__c.field-meta.xml
<CustomField>
    <fullName>Supplement_Type__c</fullName>
    <label>Supplement Type</label>
    <length>200</length>
    <type>Text</type>
</CustomField>