UCF-APR2.4/ftr main/force-app/main/default/objects/Wholesale_Service_Order__c/fields/Term_VTA__c.field-meta.xml
<CustomField>
    <fullName>Term_VTA__c</fullName>
    <label>Term(VTA)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>