UCF-APR2.4/ftr main/force-app/main/default/objects/Wholesale_Service_Order__c/fields/UNI_BDW__c.field-meta.xml
<CustomField>
    <fullName>UNI_BDW__c</fullName>
    <label>UNI BDW</label>
    <length>100</length>
    <type>Text</type>
</CustomField>